--- a/Project-0/index.html
+++ b/Project-0/index.html
@@ -3,11 +3,71 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search</title>
+    <style>
+        #header {
+            text-align: right;
+            padding: 10px;
+            margin: 5px;
+            height: 20px;
+            border: 3px solid black;
+            font-family: Arial, sans-serif;
+			font-size: 14px;
+        }
+
+        #header > a {
+            margin: 5px;
+        }
+
+        #logo {
+            text-align: center;
+            border: 3px solid black;
+            padding: 60px;
+            padding-bottom: 20px;
+            margin: 5px;
+            font-size: 50px;
+        }
+
+        #form {
+            text-align: center;
+            border: 3px solid black;
+            margin: 5px;
+            padding: 20px;
+        }
+
+        #query {
+            width: 500px;
+            height: 35px;
+        }
+
+        #button {
+            margin: 20px;
+        }
+
+        #button > input {
+            font-family: Arial, Helvetica, sans-serif;
+            margin: 4px;
+        }
+    </style>
 </head>
 <body>
-        <form action="https://google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
-        </form>
+        <div id="header">
+            <a href="#">Advanced Search</a>
+            <a href="#">Images</a>
+            <a href="#">Random</a>
+        </div> 
+        
+        <div id="logo">
+            Google
+        </div>
+
+        <div id="form">
+            <form action="https://google.com/search">
+                <input type="text" name="q" id="query">
+                <div id="button">
+                    <input type="submit" value="Google Search">
+                    <input type="button" value="I'm Feeling Lucky">
+                </div>
+            </form>
+        </div>
 </body>
 </html>
