--- a/Project-0/image.html
+++ b/Project-0/image.html
@@ -3,52 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Images</title>
-    <style>
-        #header {
-            text-align: right;
-            padding: 10px;
-            margin: 5px;
-            height: 20px;
-            border: 3px solid black;
-            font-family: Arial, sans-serif;
-			font-size: 14px;
-        }
-
-        #header > a {
-            margin: 5px;
-        }
-
-        #logo {
-            text-align: center;
-            border: 3px solid black;
-            padding: 60px;
-            padding-bottom: 20px;
-            margin: 5px;
-            font-size: 50px;
-        }
-
-        #form {
-            text-align: center;
-            border: 3px solid black;
-            margin: 5px;
-            padding: 20px;
-        }
-
-        #query {
-            width: 500px;
-            height: 35px;
-        }
-
-        #button {
-            margin: 20px;
-        }
-
-        #button > input {
-            font-family: Arial, Helvetica, sans-serif;
-            margin: 4px;
-            padding: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
         <div id="header">
