Add more styling

--- a/Project-0/image.html
+++ b/Project-0/image.html
@@ -13,15 +13,18 @@
         </div> 
         
         <div id="logo">
-            Google Images
+            <img alt="Google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+            <div id="image_logo">
+                Images
+            </div>
         </div>
 
         <div id="form">
             <form action="https://google.com/search">
                 <input type="text" name="q" id="query">
                 <input type="hidden" name="tbm" value="isch">
-                <div id="button">
-                    <input type="submit" value="Search">
+                <div id="buttons">
+                    <input type="submit" value="Search" class="button">
                 </div>
             </form>
         </div>
