--- a/Project-0/index.html
+++ b/Project-0/index.html
@@ -13,15 +13,15 @@
         </div> 
         
         <div id="logo">
-            Google
+            <img alt="Google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
         </div>
 
         <div id="form">
             <form action="https://google.com/search">
                 <input type="text" name="q" id="query">
-                <div id="button">
-                    <input type="submit" value="Google Search">
-                    <input type="button" value="I'm Feeling Lucky">
+                <div id="buttons">
+                    <input type="submit" value="Google Search" class="button">
+                    <input type="button" value="I'm Feeling Lucky" class="button">
                 </div>
             </form>
         </div>
