add advanced search button

--- a/Project-0/advanced.html
+++ b/Project-0/advanced.html
@@ -100,6 +100,22 @@
             box-shadow: 1px 1px 8px 1px #3375f1;
         }
 
+        #submit-button {
+            text-align: right;
+        }
+
+        .button {
+            border-radius: 2px;
+            border: 1px solid #3079ED;
+            background-color: #2a7cff;
+            color: white;
+            padding: 9px;
+            margin: 1px;
+            font-size: 70%;
+            font-weight: bold;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
     </style>
 </head>
 <body>
@@ -138,6 +154,10 @@
 
                 <div class="query">
                     <input type="text" class="input">
+                </div>
+
+                <div id="submit-button">
+                    <input type="submit" value="Advanced Search" class="button">
                 </div>
                 
             </form>
