--- a/Project-0/image.html
+++ b/Project-0/image.html
@@ -7,7 +7,7 @@
 </head>
 <body>
         <div id="header">
-            <a href="#">Advanced Search</a>
+            <a href="advanced.html">Advanced Search</a>
             <a href="index.html">Search</a>
             <a href="#">Random</a>
         </div> 
